src/sync/snapshots/asphalt__sync__codegen__tests__atlas_sprite_luau_trimmed.snap
---
source: src/sync/codegen.rs
expression: code
---
-- This file is automatically @generated by Asphalt.
-- It is not intended for manual editing.
local sprite = {
	sprite = {
		image = "rbxassetid://123456789",
		imageRectOffset = Vector2.new(32, 64),
		imageRectSize = Vector2.new(128, 128),
		trimmed = true,
		sourceSize = Vector2.new(128, 128),
		spriteSourceOffset = Vector2.new(8, 16),
	},
}

return sprite
