src/sync/snapshots/asphalt__sync__codegen__tests__atlas_sprite_luau_untrimmed.snap
---
source: src/sync/codegen.rs
expression: code
---
-- This file is automatically @generated by Asphalt.
-- It is not intended for manual editing.
local sprite = {
	sprite = {
		image = "rbxassetid://123456789",
		imageRectOffset = Vector2.new(32, 64),
		imageRectSize = Vector2.new(128, 128),
		trimmed = false,
		sourceSize = Vector2.new(128, 128),
	},
}

return sprite
