src/sync/snapshots/asphalt__sync__codegen__tests__atlas_sprite_typescript_untrimmed.snap
---
source: src/sync/codegen.rs
expression: code
---
// This file is automatically @generated by Asphalt.
// It is not intended for manual editing.
declare const sprite: {
	readonly sprite: {
		readonly image: string;
		readonly imageRectOffset: Vector2;
		readonly imageRectSize: Vector2;
		readonly sourceSize?: Vector2;
		readonly spriteSourceOffset?: Vector2;
		readonly trimmed: boolean;
	};
}

export = sprite
