src/sync/snapshots/asphalt__sync__codegen__tests__atlas_sprite_with_edge_values.snap
---
source: src/sync/codegen.rs
expression: code
---
-- This file is automatically @generated by Asphalt.
-- It is not intended for manual editing.
local edge_case = {
	edge_case = {
		image = "rbxassetid://0",
		imageRectOffset = Vector2.new(0, 0),
		imageRectSize = Vector2.new(1024, 1024),
		trimmed = true,
		sourceSize = Vector2.new(2048, 2048),
		spriteSourceOffset = Vector2.new(512, 512),
	},
}

return edge_case
