src/sync/snapshots/asphalt__sync__codegen__tests__luau_codegen.snap
---
source: src/sync/codegen.rs
expression: code
---
-- This file is automatically @generated by Asphalt.
-- It is not intended for manual editing.
local name = {
	fred = "world",
	qux = {
		baz = 42,
		foo = "bar",
	},
}

return name
