src/sync/snapshots/asphalt__sync__codegen__tests__mixed_nodes_luau.snap
---
source: src/sync/codegen.rs
expression: code
---
-- This file is automatically @generated by Asphalt.
-- It is not intended for manual editing.
local assets = {
	regular_image = "rbxassetid://111",
	trimmed_sprite = {
		image = "rbxassetid://123456789",
		imageRectOffset = Vector2.new(32, 64),
		imageRectSize = Vector2.new(128, 128),
		trimmed = true,
		sourceSize = Vector2.new(128, 128),
		spriteSourceOffset = Vector2.new(8, 16),
	},
	untrimmed_sprite = {
		image = "rbxassetid://123456789",
		imageRectOffset = Vector2.new(32, 64),
		imageRectSize = Vector2.new(128, 128),
		trimmed = false,
		sourceSize = Vector2.new(128, 128),
	},
}

return assets
