src/sync/snapshots/asphalt__sync__codegen__tests__mixed_nodes_typescript.snap
---
source: src/sync/codegen.rs
expression: code
---
// This file is automatically @generated by Asphalt.
// It is not intended for manual editing.
declare const assets: {
	readonly regular_image: string;
	readonly trimmed_sprite: {
		readonly image: string;
		readonly imageRectOffset: Vector2;
		readonly imageRectSize: Vector2;
		readonly sourceSize?: Vector2;
		readonly spriteSourceOffset?: Vector2;
		readonly trimmed: boolean;
	};
	readonly untrimmed_sprite: {
		readonly image: string;
		readonly imageRectOffset: Vector2;
		readonly imageRectSize: Vector2;
		readonly sourceSize?: Vector2;
		readonly spriteSourceOffset?: Vector2;
		readonly trimmed: boolean;
	};
}

export = assets
