src/sync/snapshots/asphalt__sync__codegen__tests__typescript_codegen.snap
---
source: src/sync/codegen.rs
expression: code
---
// This file is automatically @generated by Asphalt.
// It is not intended for manual editing.
declare const name: {
	fred: string
	qux: {
		baz: number
		foo: string
	}
}

export = name
